# mmdocker

./: .gitignore  Dockerfile_GPU  README.md  build_docker.sh  run_docker.sh  run_docker_openvx.sh
opencx_workspace/t1/: CMakeLists.txt  t1.c
